Change hash algorithm to xxHash.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mssql": "5.1.0",
     "parse-duration": "0.1.1",
     "underscore": "1.9.1",
+    "xxhashjs": "0.2.2",
     "yargs": "13.3.0"
   },
   "preferGlobal": true,
